# rtweekend

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.h  config.h  main.cpp  material.h  queue.h  ray.h  render.cpp  render.h  rng.cpp  rng.h  scene.cpp  scene.h  timer.cpp  timer.h  types.h
